use DocumentImport for csv import, related fdo#69006

Change-Id: Ib904510b6e897feb787497a4c8ff4204387cf6a4